--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,9 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta charset="utf-8">
   <base href="/">
-  <title>Frutme!</title>
+  <title>lameseria!</title>
 
- <!--============== INICIO HEADER frutme  ============================= -->
+ <!--============== INICIO HEADER lameseria  ============================= -->
 
 <link rel="shortcut icon" type="image/x-icon" href="assets/assetsfruit/images/favicon.png">
 <!-- Animation CSS -->
@@ -56,7 +56,7 @@
 <link rel="stylesheet" href="assets/assetsfruit/css/responsive.css">
 <link rel="stylesheet" id="layoutstyle" href="assets/assetsfruit/color/theme-default.css">
 
-<!--============== FIN HEADER frutme  ============================= -->
+<!--============== FIN HEADER lameseria  ============================= -->
 
   </head>
   <body >  
@@ -65,7 +65,7 @@
 <div id="preloader">
         <!-- <div style="color: white;"><span style="color: white;">.</span></div> -->
     <div class="line-scale" style="text-align: center;vertical-align: middle;"> 
-      <img   style="max-width: 130px; vertical-align: middle;" src="assets/assetsfruit/images/frutme.png" alt="logo" />
+      <img   style="max-width: 130px; vertical-align: middle;" src="assets/assetsfruit/images/lameseria.png" alt="logo" />
       <div class="line"  style="text-align: center;vertical-align: middle;"></div>
         <div class="line"  style="text-align: center;vertical-align: middle;"></div>
         <div class="line"  style="text-align: center;vertical-align: middle;"></div>
@@ -74,7 +74,7 @@
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 
-<!--============== INICIO JS frutme  ============================= -->
+<!--============== INICIO JS lameseria  ============================= -->
 
 <!-- Latest jQuery --> 
 <script src="assets/assetsfruit/js/jquery-1.12.4.min.js"></script> 
@@ -113,7 +113,7 @@
 <!-- scripts js --> 
 <script src="assets/assetsfruit/js/scripts.js"></script>
 
-<!--============== FIN JS frutme  ============================= -->
+<!--============== FIN JS lameseria  ============================= -->
 
 </body>
 </html>
