--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
     <link rel="stylesheet" href="assets/assetslameseria/plugins/bootstrap4/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/assetslameseria/plugins/owl-carousel/assets/owl.carousel.css">
     <link rel="stylesheet" href="assets/assetslameseria/plugins/slick/slick/slick.css">
-    <link rel="stylesheet" href="assets/assetslameseria/plugins/lightGallery-master/dist/css/lightgallery.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.3.2/css/lightgallery.css">
     <link rel="stylesheet" href="assets/assetslameseria/plugins/jquery-bar-rating/dist/themes/fontawesome-stars.css">
     <link rel="stylesheet" href="assets/assetslameseria/plugins/jquery-ui/jquery-ui.min.css">
     <link rel="stylesheet" href="assets/assetslameseria/plugins/pe7/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
@@ -66,6 +66,7 @@
 
   <!-- <script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="plugins/jquery-1.12.4.min.js"></script> -->
 <script src="assets/assetslameseria/plugins/jquery-1.12.4.min.js"></script>
+    <script src="assets/assetslameseria/plugins/lightGallery-master/dist/js/lightgallery-all.min.js"></script>
     <script src="assets/assetslameseria/plugins/owl-carousel/owl.carousel.min.js"></script>
     <script src="assets/assetslameseria/plugins/popper.min.js"></script>
     <script src="assets/assetslameseria/plugins/imagesloaded.pkgd.js"></script>
@@ -75,7 +76,6 @@
     <script src="assets/assetslameseria/plugins/slick/slick/slick.min.js"></script>
     <script src="assets/assetslameseria/plugins/jquery-bar-rating/dist/jquery.barrating.min.js"></script>
     <script src="assets/assetslameseria/plugins/slick-animation.min.js"></script>
-    <script src="assets/assetslameseria/plugins/lightGallery-master/dist/js/lightgallery-all.min.js"></script>
     <script src="assets/assetslameseria/plugins/jquery-ui/jquery-ui.min.js"></script>
     <script src="assets/assetslameseria/plugins/sticky-sidebar/dist/sticky-sidebar.min.js"></script>
     <script src="assets/assetslameseria/plugins/YTPlayer/dist/jquery.mb.YTPlayer.min.js"></script>
