--- a/src/index.html
+++ b/src/index.html
@@ -78,8 +78,8 @@
     <script src="assets/assetslameseria/plugins/slick-animation.min.js"></script>
     <script src="assets/assetslameseria/plugins/jquery-ui/jquery-ui.min.js"></script>
     <script src="assets/assetslameseria/plugins/sticky-sidebar/dist/sticky-sidebar.min.js"></script>
-    <script src="assets/assetslameseria/plugins/YTPlayer/dist/jquery.mb.YTPlayer.min.js"></script>
-    <script src="assets/assetslameseria/plugins/gmap3.min.js"></script>
+    <!-- <script src="assets/assetslameseria/plugins/YTPlayer/dist/jquery.mb.YTPlayer.min.js"></script> -->
+    <!-- <script src="assets/assetslameseria/plugins/gmap3.min.js"></script> -->
     <!-- Custom scripts-->
     <script src="assets/assetslameseria/js/main.js"></script>
 
