--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
     <link rel="stylesheet" href="assets/assetslameseria/plugins/jquery-bar-rating/dist/themes/fontawesome-stars.css">
     <link rel="stylesheet" href="assets/assetslameseria/plugins/jquery-ui/jquery-ui.min.css">
     <link rel="stylesheet" href="assets/assetslameseria/plugins/pe7/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
-    <link rel="stylesheet" href="assets/assetslameseria/plugins/YTPlayer/dist/css/jquery.mb.YTPlayer.min.css">
+    <!-- <link rel="stylesheet" href="assets/assetslameseria/plugins/YTPlayer/dist/css/jquery.mb.YTPlayer.min.css"> -->
     <link rel="stylesheet" href="assets/assetslameseria/css/style.css">
 
 <!--============== FIN HEADER lameseria  ============================= -->
