--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,8 @@
 
   <!-- <script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="plugins/jquery-1.12.4.min.js"></script> -->
 <script src="assets/assetslameseria/plugins/jquery-1.12.4.min.js"></script>
-    <script src="assets/assetslameseria/plugins/lightGallery-master/dist/js/lightgallery-all.min.js"></script>
+    <!-- <script src="assets/assetslameseria/plugins/lightGallery-master/dist/js/lightgallery-all.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.3.2/js/lightgallery.js"></script>
     <script src="assets/assetslameseria/plugins/owl-carousel/owl.carousel.min.js"></script>
     <script src="assets/assetslameseria/plugins/popper.min.js"></script>
     <script src="assets/assetslameseria/plugins/imagesloaded.pkgd.js"></script>
