--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Tu frutería a domicilio">
+  <meta name="description" content="Mueblería de autor">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
@@ -25,7 +25,7 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta charset="utf-8">
   <base href="/">
-  <title>lameseria!</title>
+  <title>La Meseria!</title>
 
  <!--============== INICIO HEADER lameseria  ============================= -->
 
