--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
   <link rel="manifest" href="manifest.webmanifest">
   <meta charset="utf-8">
   <base href="/">
-  <title>La Meseria!</title>
+  <title>La Meseria</title>
 
  <!--============== INICIO HEADER lameseria  ============================= -->
 
